<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/list_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </FrameLayout>

    <LinearLayout
        android:id="@+id/drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff3f3f3"
        android:orientation="vertical" >

        <TextView
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="INVESTOR TYPES"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:dividerHeight="1dp" />


        <Button
            android:id="@+id/question_bt"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="QUESTIONNAIRE"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/submit_bt"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="SUBMIT"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>