<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/question_layout"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:padding="10dp"
        android:layout_height="0dp"
        android:orientation="vertical">
    <TextView
        android:id="@+id/question_title_tv"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="Question 1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <TextView
            android:textSize="20dp"
            android:id="@+id/question_tx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:id="@+id/answer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>


    <Button
        android:id="@+id/next_bt"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="NEXT"
        android:layout_width="match_parent"
        android:layout_weight="0"
        android:layout_height="60dp"/>


</LinearLayout>