<resources>
    <string name="app_name">InvestorTypesCheck</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <string-array name="question">
        <item>When do you plan to make a signiicant lump sum withdrawal from your portfolio, for example, for the purchase of a irst home or for retirement needs? (From age 65 at the earliest)</item>
        <item>Which of the following questions best describes your thoughts about risks and returns?</item>
        <item>Protecting my investment portfolio from a fall in value at any time is more important to me than achieving high returns?</item>
        <item>Consider you have an investment balance of at least $20,000 or more. If after a short period of time (less than 1 year) your balance has dropped in value, which statement relects best how you would feel about this?</item>
        <item>How often would you tend to worry about your investment returns?</item>
    </string-array>



    <string name="question01">When do you plan to make a signiicant lump sum withdrawal from your portfolio, for example, for the purchase of a irst home or for retirement needs? (From age 65 at the earliest)</string>
    <string-array name="question01_answer">
        <item>Within 2 years – you need a DEFENSIVE TYPE fund</item>
        <item>In 2 to 5 years – you need a CONSERVATIVE TYPE fund</item>
        <item>In 6 to 10 years – continue to next question</item>
        <item>In 11 to 20 years – continue to next question</item>
        <item>More than 20 years – continue to next question</item>
    </string-array>

    <string-array name="question02_answer">
        <item>I want to minimise my risk and am therefore willing to accept low returns</item>
        <item>I am willing to take a moderate amount of risk to generate low to medium returns</item>
        <item>I am willing to take a reasonable amount of risk to provide a more medium return</item>
        <item>In order to receive higher returns, I am willing to take a relatively high amount of risk</item>
        <item>I want to maximise my returns and am willing to accept a high level of risk</item>
    </string-array>
    <string-array name="question03_answer">
        <item>Strongly Agree</item>
        <item>Agree</item>
        <item>Neither agree or disagree</item>
        <item>Disagree</item>
        <item>Strongly Disagree</item>
    </string-array>
    <string-array name="question04_answer">
        <item>I would be unhappy with any drop in value</item>
        <item>I would be OK with a drop in value of no more than 5%</item>
        <item>I would be OK with a drop in value of no more than 10%</item>
        <item>I would be OK with a drop in value of up to 15%</item>
        <item>I would be OK with a drop in value of up to 20%</item>
    </string-array>
    <string-array name="question05_answer">
        <item>Daily</item>
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Annually</item>
        <item>Never or only occasionally over the longer term</item>
    </string-array>


    <string name="question02">Which of the following questions best describes your thoughts about risks and returns?</string>
    <string name="question03">Protecting my investment portfolio from a fall in value at any time is more important to me than achieving high returns?</string>
    <string name="question04">Consider you have an investment balance of at least $20,000 or more. If after a short period of time (less than 1 year) your balance has dropped in value, which statement relects best how you would feel about this?</string>
    <string name="question05">How often would you tend to worry about your investment returns?</string>



</resources>