<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/action_menu"
		android:icon="@drawable/ic_action_menu"
		android:orderInCategory="100"
		android:showAsAction="always"
		android:title="MENU" />
</menu>
